--- a/index.html
+++ b/index.html
@@ -27,5 +27,14 @@
         </ul>
       </nav>
     </header>
+    <section class="section home__section">
+      <h1 class="home__heading">This is the home page</h1>
+      <p class="home__detail">
+        Click on the tabs above to check each component, JS is not well
+        implemented and not responsive.
+        <br />
+        Also this is the assignment, not Component Library
+      </p>
+    </section>
   </body>
 </html>
