style: style changed

--- a/drawer.html
+++ b/drawer.html
@@ -40,7 +40,7 @@
             <p>Navigations</p>
             <div class="drawer__top--one drawers">
               <i class="bx bx-home-alt"></i>
-              <h3>Home</h3>
+              <h3 href="#section2">Home</h3>
             </div>
             <div class="drawer__top--two drawers">
               <i class="bx bx-chat"></i>
