--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <br />
         Also this is the assignment, not Component Library
       </p>
+      <button class="clay">Get Started</button>
     </section>
   </body>
 </html>
